# Smart-Calculator

./: .replit  README.md  pyproject.toml  replitrun.py  requirements.txt
Smart Calculator/task/calculator/: calculator.py
smartCalculator/task/calculator/: calculator.py
