[tool.poetry]
name = "smart-calculator"
version = "0.1.0"
description = ""
authors = ["Jason Tolbert <jasonalantolbert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numexpr = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
